--- a/doc/wrangler.jsonc
+++ b/doc/wrangler.jsonc
@@ -5,9 +5,13 @@
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "echolove",
   "compatibility_date": "2025-06-17",
+  "compatibility_flags": ["nodejs_compat"],
   "main": "./workers/app.ts",
   "vars": {
-    "VALUE_FROM_CLOUDFLARE": "Hello from Hono/CF"
+    "VALUE_FROM_CLOUDFLARE": "Hello from Hono/CF",
+    "STRIPE_SECRET_KEY": "sk_test_...",
+    "FRONTEND_URL": "http://localhost:5173",
+    "JWT_SECRET": "secret"
   },
   "observability": {
     "enabled": true
