add deploy copy

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "scripts": {
     "build": "react-router build",
     "cf-typegen": "wrangler types",
-    "deploy": "npm run build && wrangler deploy",
+    "deploy": "cp doc/wrangler.jsonc wrangler.jsonc && npm run build && wrangler deploy",
     "dev": "react-router dev",
     "preview": "npm run build && vite preview",
     "typecheck": "npm run cf-typegen && react-router typegen && tsc -b"
