--- a/package.json
+++ b/package.json
@@ -17,21 +17,18 @@
     "publish": true
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "@google/genai": "^1.0.0",
     "hono": "^4.8.2",
     "isbot": "5.1.26",
-    "lucide-react": "^0.562.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router": "7.6.3",
-    "stripe": "^20.1.2"
+    "react-router": "7.6.3"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "1.7.5",
     "@cloudflare/workers-types": "^4.20250425.0",
     "@react-router/dev": "7.6.3",
     "@tailwindcss/vite": "4.1.4",
-    "@types/bcryptjs": "^2.4.6",
     "@types/node": "24.0.4",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
